# Project-Elpis

./: .gitignore  CMakeLists.txt  LICENSE  test_print.html
src/: agent.cpp  agent.h  base64.cpp  base64.h  chart_renderer.cpp  chart_renderer.h  html_converter.cpp  html_converter.h  http_client.cpp  http_client.h  main.cpp  ocr_engine.cpp  ocr_engine.h  pdf_engine.cpp  pdf_engine.h  pdf_writer.cpp  pdf_writer.h  server.cpp  server.h  style_profile.cpp  style_profile.h  template_engine.cpp  template_engine.h  user_ledger.cpp  user_ledger.h  utils.cpp  utils.h
static/: app.js  styles.css
templates/: report_preview.html
templates/profiles/: 202453460009.html  202453460017.html  202453460034.html  202453460047.html  202453460052.html  202453460073.html  default_academic.html  default_modern_lab.html
